fdo#37167 create statement before execute/wasNull/getBoolean

This populates "object" member variable.

The "createStatement" calls were removed in:

 commit b9392a36645d8632b97ad79240f483b3a1683b61
 Author: Ivo Hinkelmann <ihi@openoffice.org>
 Date:   Thu Apr 23 10:42:05 2009 +0000

    CWS-TOOLING: integrate CWS dbaperf1

This was most probably in error since the call is not removed from the
other modified member functions in this commit and/or failed to
aaccount for the scenario of no parameter (and thus no setXXX call
before execute).

Change-Id: Ic0e7b7b64ea496791f32c1416aa7d4416f909616
Reviewed-on: https://gerrit.libreoffice.org/7280
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>